Modal: fixed flicker effect during page load

--- a/src/components/common/modal/modal.scss
+++ b/src/components/common/modal/modal.scss
@@ -6,6 +6,7 @@
     right: 0;
     bottom: 0;
     left: 0;
+    z-index: -1;
     padding: rem(32);
     background-color: #F4F5F9;
     opacity: 0;
